[package]
name = "chaum-pedersen-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4", default_features = false, features = ["alloc", "u64_backend"] }
mod_exp = "1.0.1"
rand = "0.8.5"
rand_core = { version = "0.6", default_features = false }
rpassword = "0.0.4"
sha256 = "1.1.2"